--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,27 @@
     <body style='margin : 0px; overflow: hidden;'>
         <a-scene embedded arjs>
       	<a-marker preset="hiro">
-                <a-box position='0 -1 0' material='color: white;'></a-box>
+                <a-box position='0 0.5 0' material='color: white;'></a-box>
       	</a-marker>
       	<a-entity camera></a-entity>
         </a-scene>
   </body>
+
+  <script type="text/javascript">
+    var box = document.querySelector('a-box');
+    var actions = [];
+    actions['w'] = function(){
+        box.setAttribute('position', '2 2 2');
+    }
+    actions['a'] = function(){
+        box.setAttribute('position', '2 2 2');
+    }
+    actions['s'] = function(){
+        box.setAttribute('position', '2 2 2');
+    }
+    actions['d'] = function(){
+        box.setAttribute('position', '2 2 2');
+    }
+    document.addEventListener('keydown', function(e){})
+  </script>
 </html>
