--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,12 @@
       	<a-marker preset="hiro">
                 <a-box position='0 0.5 0' material='color: white;'></a-box>
       	</a-marker>
-      	<a-entity camera></a-entity>
+      	<a-entity camera keyboard-controls></a-entity>
         </a-scene>
   </body>
 
   <script type="text/javascript">
-    var box = document.querySelector('a-box');
-    var actions = [];
-    actions['w'] = function(){
-        box.setAttribute('position', '2 2 2');
-    }
-    actions['a'] = function(){
-        box.setAttribute('position', '2 2 2');
-    }
-    actions['s'] = function(){
-        box.setAttribute('position', '2 2 2');
-    }
-    actions['d'] = function(){
-        box.setAttribute('position', '2 2 2');
-    }
-    document.addEventListener('keydown', function(e){
-        var func = actions[e.key];
-        if(func) func();
-    })
+  var keyboardControls = el.components['keyboard-controls'];
+  console.log(keyboardControls.isPressed('KeyA'));
   </script>
 </html>
