--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
       	<a-marker preset="hiro">
                 <a-box position='0 0.5 0' material='color: white;'></a-box>
       	</a-marker>
-      	<a-entity camera keyboard-controls></a-entity>
+      	<a-entity camera></a-entity>
+        <a-entity keyboard-controls id="keyboard-controls"></a-entity>
         </a-scene>
   </body>
 
   <script type="text/javascript">
+  var el = document.querySelector('#keyboard-controls');
   var keyboardControls = el.components['keyboard-controls'];
   console.log(keyboardControls.isPressed('KeyA'));
   </script>
