--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
           var actions = [];
           actions['w'] = function(){
               box.setAttribute('position', '1 1 1');
+              console.log(box);
           }
           document.addEventListener("keydown", function(e){
 
