--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
               console.log(box);
           }
           document.addEventListener("keydown", function(e){
-
+              var action = actions[e.key];
+              if(action) action();
           });
         </script>
         <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
