Making box inner

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <script type="text/javascript">
-          var box = document.querySelector('a-box');
+          var box;
           var actions = [];
           actions['w'] = function(){
               box.setAttribute('position', '1 1 1');
               console.log(box);
           }
           document.addEventListener("keydown", function(e){
+              if(!box) box = document.querySelector('a-box');
               var action = actions[e.key];
               if(action) action();
           });
