--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <body style='margin : 0px; overflow: hidden;'>
         <a-scene embedded arjs>
       	<a-marker preset="hiro">
-                <a-box position='0 0.5 0' material='color: white;'></a-box>
+                <a-box position='0 0.5 0' material='color: white;' src="/assets/dado.jpg"></a-box>
       	</a-marker>
       	<a-entity camera></a-entity>
         <a-entity keyboard-controls id="keyboard-controls"></a-entity>
