Making box inner

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,6 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
-        <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
-        <script src="https://rawgit.com/ngokevin/aframe-animation-component/master/dist/aframe-animation-component.min.js"></script>
-        <script src="https://rawgit.com/protyze/aframe-curve-component/master/dist/aframe-curve-component.min.js"></script>
-        <!-- <script src="https://rawgit.com/protyze/aframe-alongpath-component/master/dist/aframe-alongpath-component.min.js"></script> -->
         <script type="text/javascript">
           var box;
           var actions = [];
@@ -22,24 +17,17 @@
               if(action) action(marker.getAttribute('position'));
           });
         </script>
+        <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
+        <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
         <title>AR</title>
     </head>
     <body style='margin : 0px; overflow: hidden;'>
         <a-scene embedded arjs>
       	<a-marker preset="hiro">
-                <!-- <a-box position='0 0.5 0' material='color: white;' src="/dado.jpg"></a-box> -->
-                <a-scene>
-                  <!-- <a-camera position="0 0 4"</a-camera> -->
-                  <!-- <a-sky id="image-360" radius="20" src="#recital"></a-sky> -->
-                  <a-entity id="object-container" position="0 5 -2" scale=".1 .1 .1" rotation="90 0 0"></a-entity>
-                  <a-light type="ambient" intensity="0.7" color="#ffffff"></a-light>
-                  <a-light intensity="3" color="#00ffff" position="-5.72 6.65 0.80" animation__color="property:color; dir:alternate; dur:2000; easing:easeInOutSine; loop:true; to:#ff0000" alongpath="path:10,10,-10 -20,10,-10 10,0,-10; closed:true; dur:12000"></a-light>
-                  <a-light intensity="5" color="#ff0000" position="8.60 6.65 0.80" animation__color="property:color; dir:alternate; dur:2000; easing:easeInOutSine; loop:true; to:#0000ff" alongpath="path:-2,-2,5 2,-1,5 0,-1,5; closed:true; dur:3000;"></a-light>
-                </a-scene>
+                <a-box position='0 0.5 0' material='color: white;' src="/dado.jpg"></a-box>
       	</a-marker>
       	<a-entity camera></a-entity>
         <a-entity keyboard-controls id="keyboard-controls"></a-entity>
         </a-scene>
   </body>
-  <script type="text/javascript" src="app.js"></script>
 </html>
