--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
         </script>
         <script src="https://aframe.io/releases/0.6.1/aframe.min.js"></script>
         <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+        <script src="https://unpkg.com/aframe-cubemap-component@0.1.2/dist/aframe-cubemap-component.min.js"></script>
         <title>AR</title>
     </head>
     <body style='margin : 0px; overflow: hidden;'>
