--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <a-scene embedded arjs>
       	<a-marker preset="hiro">
                 <!-- <a-box position='0 0.5 0' material='color: white;' src="/dado.jpg"></a-box> -->
-                <a-entity cubemap="folder: /assets/"></a-entity>
+                <a-entity cubemap="folder: /"></a-entity>
       	</a-marker>
       	<a-entity camera></a-entity>
         <a-entity keyboard-controls id="keyboard-controls"></a-entity>
