--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <body style='margin : 0px; overflow: hidden;'>
         <a-scene embedded arjs>
       	<a-marker preset="hiro">
-                <a-box position='0 0.5 0' material='color: white;'></a-box>
+                <a-box position='0 0.5 0' material='color: white; sphericalEnvMap: /recital.jpg;'></a-box>
                 <!-- <a-entity cubemap="folder: /"></a-entity> -->
       	</a-marker>
       	<a-entity camera></a-entity>
